# videocity_server

./: .gitignore  hey.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
demo/: index.html  main.js
demo/css/: style.css
demo/demo/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1683570870248-753385561fac1.mjs
demo/demo/src/: App.tsx  index.css  main.tsx  utils.ts  ws.ts
demo/demo/src/components/: loading.tsx  toast.css  toast.tsx  tooltip.tsx  video.tsx
demo/demo/src/pages/: CopyLink.tsx  Demo.tsx  Error.tsx  Index.tsx
demo/demo/src/utils/: constants.ts  deviceInfo.ts  index.ts  microphone.ts  peerConnection.tsx
node/: package.json  pnpm-lock.yaml  readme.md  run.sh  tsconfig.json
node/src/: env.ts  index.ts  main.ts
node/src/lib/: actions.ts  config.ts  utils.ts  worker.ts  ws.ts
node/src/lib/peer/: handler.ts  index.ts
node/src/lib/room/: handlers.ts  index.ts  types.d.ts
node/src/types/: index.d.ts
node/src/types/peer/: index.d.ts
node/src/types/room/: index.d.ts
node/src/utils/: analytics.ts  index.ts  worker.ts
rust/: .gitignore  Cargo.toml  readme.md
rust/src/: main.rs
rust/src/media/: mod.rs
rust/src/public/: hey.txt  index.html
rust/src/room/: mod.rs
rust/src/server/: mod.rs
rust/src/session/: mod.rs  socket_json_msg.rs
src/: index.ts
src/lib/: config.ts  logger.ts  ws.ts
versetica/server/: config.js  package.json  server.js
versetica/server/public/: index.html
