[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rwlock = "1.3.0"
actix-web = { version = "3.3.2" }
actix-web-actors = "3"
dotenv = "0.15.0"
mediasoup = "0.11.4"
rand = "0.8.3"
serde = "1"
serde_json = "1"

